<resources>
    <string name="app_name">Brewing</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="loading">Loading…</string>
    <string name="sign_out">Sign Out</string>
    <string name="logout">Logout</string>
    <string name="title_activity_maps">Map</string>
    <string name="rating">Califícala</string>
    <string name="observations">Observaciones</string>
    <string name="insert_text">Introduzca un texto</string>
    <string name="cancel">Cancelar</string>
    <string name="accept">Aceptar</string>
    <string name="image_beer_content_description">Imagen de una cerveza</string>
    <string name="select_beer">Seleccione una cerveza</string>
    <string name="rating_beers">Cervezas valoradas</string>
    <string name="description">Descripción</string>
</resources>
