<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="model"
            type="com.mibaldi.presentation.ui.login.EmailPasswordViewModel" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:orientation="vertical"
            app:elevation="0dp">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_scrollFlags="scroll|exitUntilCollapsed|snap">


                <FrameLayout
                    app:layout_collapseMode="parallax"
                    android:layout_width="match_parent"
                    android:layout_height="273dp"
                    android:background="@drawable/blue_bg">

                    <ImageView
                        android:layout_width="77dp"
                        android:layout_height="77dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="93dp"
                        android:src="@drawable/ic_beer" />

                </FrameLayout>

            </com.google.android.material.appbar.CollapsingToolbarLayout>

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/main_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context=".ui.login.EmailPasswordActivity">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    tools:context=".LoginActivity5">


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">


                        <RelativeLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="62dp"
                            android:layout_marginTop="36.7dp"
                            android:layout_marginRight="62dp"
                            android:background="@drawable/blue_border_rounded_cornwe">

                            <!-- INPUT -->
                            <EditText
                                android:id="@+id/fieldEmail"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_toRightOf="@+id/username_icon"
                                android:background="@android:color/transparent"
                                android:hint="@string/hint_email"
                                android:inputType="textEmailAddress"
                                android:maxLines="1"
                                android:paddingStart="16dp"
                                android:paddingTop="15dp"
                                android:paddingEnd="16dp"
                                android:paddingBottom="15dp"
                                android:text="@={model.user.email}"
                                android:textCursorDrawable="@drawable/cursor_color"
                                android:textSize="12sp"
                                app:error="@{model.validateFormEmail}" />

                            <!-- ICON -->
                            <ImageView
                                android:id="@+id/username_icon"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_centerVertical="true"
                                android:layout_marginLeft="17dp"
                                android:src="@drawable/ic_email" />

                        </RelativeLayout>


                        <RelativeLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="62dp"
                            android:layout_marginTop="12.7dp"
                            android:layout_marginRight="62dp"
                            android:background="@drawable/blue_border_rounded_cornwe">

                            <!-- INPUT -->
                            <EditText
                                android:id="@+id/fieldPassword"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_toRightOf="@+id/icon"
                                android:background="@android:color/transparent"
                                android:hint="@string/hint_password"
                                android:inputType="textPassword"
                                android:maxLength="10"
                                android:maxLines="1"
                                android:paddingStart="16dp"
                                android:paddingTop="15dp"
                                android:paddingEnd="16dp"
                                android:paddingBottom="15dp"
                                android:text="@={model.passwordField}"
                                android:textCursorDrawable="@drawable/cursor_color"
                                android:textSize="12sp"
                                app:error="@{model.validateFormPassword}" />

                            <!-- ICON -->
                            <ImageView
                                android:id="@+id/icon"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_centerVertical="true"
                                android:layout_marginLeft="17dp"
                                android:src="@drawable/ic_keys" />

                        </RelativeLayout>


                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/emailSignInButton"
                            style="@style/Widget.AppCompat.Button.Colored"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="62dp"
                            android:layout_marginTop="24dp"
                            android:layout_marginRight="62dp"
                            android:onClick="@{()-> model.signIn()}"
                            android:text="@string/sign_in"
                            app:cornerRadius="10dp" />

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/emailCreateAccountButton"
                            style="@style/Widget.AppCompat.Button.Colored"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="62dp"
                            android:layout_marginTop="8dp"
                            android:layout_marginRight="62dp"
                            android:onClick="@{()-> model.createAccount()}"
                            android:text="@string/create_account"
                            app:cornerRadius="10dp" />

                    </LinearLayout>

                </RelativeLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>

        <ProgressBar
            android:id="@+id/progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            app:visible="@{model.dataLoading}" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>
